added mem_alloc_align, dropped memory_allocator_experimental

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -3,7 +3,7 @@
   desc MutekH kernel core
   module mutek Mutek
   flags mandatory
-  single CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+  single CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
 %config end
 
 %config CONFIG_MUTEK_MAIN
@@ -177,28 +177,22 @@
   parent CONFIG_MUTEK
 %config end
 
-%config CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
-  desc Enable use of experimental memory allocation algorithm.
-  single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
-  parent CONFIG_MUTEK
-%config end
-
 %config CONFIG_MUTEK_MEMALLOC_SMART
   desc Enable use of memory allocation algorithm.
-  when CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL! CONFIG_MUTEK_MEMALLOC_SIMPLE!
+  when CONFIG_MUTEK_MEMALLOC_SIMPLE!
   single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
   parent CONFIG_MUTEK
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT
   desc select memory allocation algorithm first fit
-  parent CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+  parent CONFIG_MUTEK_MEMALLOC_SMART
   default defined
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
   desc select memory allocation algorithm best fit
-  parent CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+  parent CONFIG_MUTEK_MEMALLOC_SMART
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_ALIGN
@@ -210,14 +204,18 @@
 
 %config CONFIG_MUTEK_MEMALLOC_SCRAMBLE
   desc When enabled all allocated and freed memory blocks will filled be with 0x5a and 0xa5 bytes
+  desc Checks are performed when allocating or resizing a memory block to ensure free blocks have not been overwritten.
+  desc The mem_check and memory_allocator_region_check functions can be used to check the whole chain of blocks.
   when CONFIG_DEBUG
   parent CONFIG_MUTEK
 %config end
 
-%config CONFIG_MUTEK_MEMALLOC_SCRAMBLE_INIT
-  desc When enabled regions will filled be with 0x5a bytes
-  when CONFIG_DEBUG
-  parent CONFIG_MUTEK
+%config CONFIG_MUTEK_MEMALLOC_SCRAMBLE_CHECK
+  desc Specify the amount of bytes at start and and of free memory blocks which are checked to contain 0xa5 bytes.
+  desc If this value is set to 0, no checks are performed.
+  parent CONFIG_MUTEK_MEMALLOC_SCRAMBLE
+  flags value
+  default 64
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_STATS
@@ -227,17 +225,20 @@
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_CRC
-  desc When enabled all memory block headers will include a CRC32
-  depend CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+  desc When enabled all memory block headers will include a CRC32.
+  desc CRC checks are performed when calling memory allocator functions.
+  desc The mem_check and memory_allocator_region_check functions can be used to check the whole chain of blocks.
+  depend CONFIG_MUTEK_MEMALLOC_SMART
   when CONFIG_DEBUG
   depend CONFIG_LIBCRYPTO_CRC32
   parent CONFIG_MUTEK
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_GUARD
-  desc Add a guard zone before and after each allocated block.
-  desc All guard zone content can be check with the mem_guard_check() function to detect bad memory write access.
-  depend CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+  desc Add a guard zone before and after each allocated block. These two zones are filled with 0x55 an 0xaa bytes.
+  desc Checks are performed when freeing or resizing a memory block to ensure the guard zones have not been overwritten.
+  desc The mem_check and memory_allocator_region_check functions can be used to check the whole chain of blocks.
+  depend CONFIG_MUTEK_MEMALLOC_SMART
   when CONFIG_DEBUG
   suggest CONFIG_MUTEK_MEMALLOC_ALIGN=1
   require CONFIG_MUTEK_MEMALLOC_GUARD_SIZE
@@ -248,7 +249,7 @@
   desc Memory allocation debug guard zone size in bytes.
   flags value
   parent CONFIG_MUTEK_MEMALLOC_GUARD
-  default 256
+  default 128
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_GUARD_INSTRUMENT
