--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -50,7 +50,7 @@
 %config CONFIG_SOCLIB_MEMCHECK
   desc Enable instrumentation with the SocLib memory checker ISS wrapper
   parent CONFIG_ARCH_SOCLIB
-  depend CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
+  depend CONFIG_MUTEK_MEMALLOC_SMART
 %config end
 
 %config CONFIG_SOCLIB_MEMCHECK_ADDRESS
