--- a/examples/malloc_stress/config
+++ b/examples/malloc_stress/config
@@ -45,6 +45,7 @@
   CONFIG_LIBCRYPTO
   CONFIG_LIBCRYPTO_CRC32
   CONFIG_MUTEK_PRINTK_HEXDUMP
+  CONFIG_MUTEK_MEMALLOC_STATS
 #  CONFIG_MUTEK_PRINTK_KEEP_EARLY
 
 %include $(SRC_DIR)/examples/common/build_options.conf
