formatter_printf handles more corner cases

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -82,7 +82,8 @@
 
 %config CONFIG_LIBC_FORMATTER_SIMPLE
   parent CONFIG_LIBC
-  desc Reduce formater algorithm features to bare minimum
+  desc Reduce printk and printf functions formater algorithm features to bare minimum.
+  suggest_when CONFIG_COMPILE_OPTIMIZE=s
 %config end
 
 %config CONFIG_LIBC_FORMATTER_FLOAT
