--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -1,11 +1,17 @@
 
 %config CONFIG_NETWORK
   desc Enable network support
-  depend CONFIG_MUTEK_TIMER
+  depend CONFIG_DEVICE_TIMER
   depend CONFIG_MUTEK_SCHEDULER
   depend CONFIG_MUTEK_SEMAPHORE
   module libnetwork
 %config end
+
+%init INIT_NETWORK
+  during INIT_LIBRARIES
+  parent CONFIG_NETWORK
+  function libnetwork_init libnetwork_cleanup
+%init end
 
 %config CONFIG_NETWORK_AUTOALIGN
   desc Force packet buffer alignment
