added gaisler GRETH ethernet driver

--- a/arch/gaisler/drivers/Makefile
+++ b/arch/gaisler/drivers/Makefile
@@ -19,3 +19,7 @@ ifeq ($(CONFIG_DRIVER_GAISLER_GPTIMER), defined)
 subdirs += gptimer
 endif
 
+ifeq ($(CONFIG_DRIVER_GAISLER_GRETH), defined)
+subdirs += greth
+endif
+
