--- a/examples/common/platforms-gaisler.conf
+++ b/examples/common/platforms-gaisler.conf
@@ -32,6 +32,7 @@
   CONFIG_DRIVER_GAISLER_APBCTRL
   CONFIG_DRIVER_GAISLER_IRQMP
   CONFIG_DRIVER_GAISLER_GPTIMER
+  CONFIG_DRIVER_GAISLER_GRETH
 
   #################################################
   # CPUs
