added enst rttimer period configuration token

--- a/drivers/timer/enst_rttimer/timer.config
+++ b/drivers/timer/enst_rttimer/timer.config
@@ -7,3 +7,9 @@
   suggest CONFIG_DEVICE_IRQ
 %config end
 
+%config CONFIG_DRIVER_ENST_RTTIMER_PERIOD
+  desc Telecom ParisTech Real-Time timer default pre-scaler period.
+  parent CONFIG_DRIVER_ENST_RTTIMER
+  flags value 
+  default 1000
+%config end
