added device address space routing stub

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -24,6 +24,12 @@
   flags auto
 %config end
 
+%config CONFIG_DEVICE_ADDRESS_SPACES
+  parent CONFIG_DEVICE
+  desc Support platforms with multiple address spaces.
+  flags auto
+%config end
+
 %config CONFIG_DEVICE_CPU
   parent CONFIG_DEVICE
   flags auto
