add SMP support for gaisler platform

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -5,6 +5,7 @@
   depend CONFIG_ARCH_SMP_CAPABLE
   parent CONFIG_ARCH_META
   when CONFIG_CPU_MAXCOUNT>1
+  flags	internal
 %config end
 
 %config CONFIG_ARCH_CLUSTER
@@ -27,6 +28,14 @@
   parent CONFIG_CPU_META
   desc Platform is designed to support multi-processor operation
   flags meta
+%config end
+
+%config CONFIG_ARCH_NOT_SMP_CAPABLE
+  parent CONFIG_CPU_META
+  desc No support for multi-processors systems
+  when CONFIG_ARCH_SMP_CAPABLE!
+  require CONFIG_CPU_MAXCOUNT=1
+  flags internal
 %config end
 
 %config CONFIG_RAM_ADDR
