--- a/arch/gaisler/drivers/irqmp/irqmp.config
+++ b/arch/gaisler/drivers/irqmp/irqmp.config
@@ -1,20 +1,32 @@
 
 %config CONFIG_DRIVER_GAISLER_IRQMP
-  desc Provide support for Gaisler interrupt controller
-  depend CONFIG_DEVICE_ICU
+  desc Provide support for Gaisler IRQMP device
   parent CONFIG_ARCH_GAISLER
+%config end
+
+%init INIT_GAISLER_IRQMP_START_CPUS
+  parent CONFIG_DRIVER_GAISLER_IRQMP CONFIG_ARCH_SMP
+  during INIT_START_CPUS
+  function gaisler_irqmp_start_cpus
+%init end
+
+%config CONFIG_DRIVER_GAISLER_IRQMP_ICU
+  desc Enable support for interrupt controller feature of IRQMP.
+  desc If this option is undefined, the driver can still be used to start other cpus in SMP platforms.
+  parent CONFIG_ARCH_GAISLER
+  depend CONFIG_DEVICE_ICU
 %config end
 
 %config CONFIG_DRIVER_GAISLER_IRQMP_BYPASS
   desc Enforce use of interrupt bypass end-points which improves irq latency on gaisler systems
-  parent CONFIG_DRIVER_GAISLER_IRQMP
+  parent CONFIG_DRIVER_GAISLER_IRQMP_ICU
   depend CONFIG_DEVICE_IRQ_BYPASS
   default defined
 %config end
 
 %config CONFIG_DRIVER_GAISLER_IRQMP_EIRQ
   desc Enable support for extended interrupts
-  parent CONFIG_DRIVER_GAISLER_IRQMP
+  parent CONFIG_DRIVER_GAISLER_IRQMP_ICU
   default defined
 %config end
 
