--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -4,6 +4,7 @@
   parent CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=gaisler
+  provide CONFIG_ARCH_SMP_CAPABLE
   require CONFIG_ROM_ADDR
   require CONFIG_ROM_SIZE
   require CONFIG_RAM_ADDR
@@ -20,12 +21,6 @@
   parent CONFIG_ARCH_GAISLER
   during INIT_MUTEK_MEMALLOC
   function gaisler_mem_init
-%init end
-
-%init INIT_GAISLER_START_CPUS
-  parent CONFIG_ARCH_GAISLER CONFIG_ARCH_SMP
-  during INIT_START_CPUS
-  function gaisler_start_cpus
 %init end
 
 
