--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -31,6 +31,14 @@
 #  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
+%config CONFIG_CPU_SPARC_LEON3_CASA
+  parent CONFIG_CPU_SPARC_LEON3
+  desc Enable use of CASA leon3 instruction, greatly improves atomic operations performances.
+  desc This instruction may not be available on all leon processors.
+  suggest_when CONFIG_ARCH_SMP
+%config end
+
+
 %config CONFIG_DRIVER_CPU_SPARC
   desc Enable Sparc processor device driver
   parent CONFIG_CPU_SPARC
