--- a/arch/arch.config
+++ b/arch/arch.config
@@ -20,7 +20,7 @@
   desc meta configuration token used to impose requirements
   flags	mandatory internal root
   require CONFIG_ARCH_NAME
-  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE CONFIG_ARCH_GAISLER
+  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE CONFIG_ARCH_GAISLER CONFIG_ARCH_ATMEL
   depend CONFIG_ARCH_BOOTLOADER CONFIG_CPU_RESET_HANDLER
 %config end
 
