improved init stuff

--- a/arch/gaisler/drivers/irqmp/irqmp.config
+++ b/arch/gaisler/drivers/irqmp/irqmp.config
@@ -5,7 +5,8 @@
 %config end
 
 %init INIT_GAISLER_IRQMP_START_CPUS
-  parent CONFIG_DRIVER_GAISLER_IRQMP CONFIG_ARCH_SMP
+  parent CONFIG_DRIVER_GAISLER_IRQMP
+  condition CONFIG_ARCH_SMP
   during INIT_START_CPUS
   function gaisler_irqmp_start_cpus
 %init end
