--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -12,7 +12,8 @@
 %config end
 
 %init INIT_SOCLIB_DATA
-  parent CONFIG_ARCH_SOCLIB CONFIG_DATA_FROM_ROM
+  parent CONFIG_ARCH_SOCLIB
+  condition CONFIG_DATA_FROM_ROM
   during INIT_MEMORY_SECTIONS
   function soclib_data_section_init
 %init end
@@ -30,15 +31,17 @@
 %init end
 
 %init INIT_SOCLIB_SMP_WAIT_BOOTSTRAP
+  parent CONFIG_ARCH_SOCLIB
+  condition CONFIG_ARCH_SMP
   desc Make non-bootstrap processors wait for the startup signal
-  parent CONFIG_ARCH_SOCLIB CONFIG_ARCH_SMP
   during INIT_SMP
   before INIT_CPUS
   function soclib_smp_wait_bootstrap
 %init end
 
 %init INIT_SOCLIB_START_CPUS
-  parent CONFIG_ARCH_SOCLIB CONFIG_ARCH_SMP
+  parent CONFIG_ARCH_SOCLIB
+  condition CONFIG_ARCH_SMP
   during INIT_START_CPUS
   function soclib_start_cpus
 %init end
@@ -67,9 +70,10 @@
 
 
 %init INIT_SOCLIB_VMEM
+  parent CONFIG_ARCH_SOCLIB
   desc Intialize SoCLib virtual memory
   during INIT_MEMORY
-  parent CONFIG_VMEM
+  condition CONFIG_VMEM
   function soclib_vmem_init
 %init end
 
