--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -6,24 +6,28 @@
 %config end
 
 %init INIT_DEVICE
+  parent CONFIG_DEVICE
   desc Discover and init hardware
   during INIT_BOOTSTRAP
   after INIT_MEMORY
 %init end
 
 %init INIT_DEVICE_TREE
+  parent CONFIG_DEVICE
   desc Initialize device tree
   during INIT_DEVICE
   function device_tree_init
 %init end
 
 %init INIT_DEVICE_ENUM
+  parent CONFIG_DEVICE
   desc Enumeration of processors and devices by arch/ specific code
   during INIT_DEVICE
   after INIT_DEVICE_TREE
 %init end
 
-%init INIT_DEVICE_DRIVERS
+%init INIT_DEVICE_DRIVERS 
+  parent CONFIG_DEVICE
   desc Attach available drivers to devices in tree and initialize devices
   during INIT_DEVICE
   after INIT_DEVICE_ENUM
@@ -31,6 +35,7 @@
 %init end
 
 %init INIT_DEVICE_CPU_REGS
+  parent CONFIG_DEVICE
   desc Let processor driver initialize processor registers
   during INIT_CPUS
   function libdevice_cpu_regs_initsmp
