--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -6,19 +6,88 @@
   single CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
 %config end
 
+%init INIT_MUTEKH_STARTUP
+  parent CONFIG_MUTEK
+  desc Os startup
+  flags calls
+%init end
+
+%init INIT_BOOTSTRAP
+  parent CONFIG_MUTEK
+  desc Root init token for all startup operations which must be performed on the bootstrap cpu only
+  during INIT_MUTEKH_STARTUP
+%init end
+
+%init INIT_START_CPUS
+  parent CONFIG_MUTEK
+  desc Start non-bootstrap processors, must be provided in arch/ code.
+  condition CONFIG_ARCH_SMP
+  during INIT_BOOTSTRAP
+  after INIT_SMP_STARTUP_BARRIER
+  before INIT_SMP
+  flags notempty
+%init end
+
+%init INIT_MEMORY
+  parent CONFIG_MUTEK
+  desc Initialization of memory
+  during INIT_BOOTSTRAP
+%init end
+
+%init INIT_MEMORY_SECTIONS
+  parent CONFIG_MUTEK
+  desc Initialization of memory sections (zero .bss and initialize .data) if needed
+  during INIT_MEMORY
+%init end
+
+%init INIT_SMP
+  parent CONFIG_MUTEK
+  during INIT_MUTEKH_STARTUP
+  desc Root init token for all startup operations which may be performed on multiple processors
+  flags calls
+%init end
+
+%init INIT_CPUS
+  parent CONFIG_MUTEK
+  desc Initialization of processors
+  during INIT_SMP
+%init end
+
+%init INIT_LIBRARIES
+  parent CONFIG_MUTEK
+  desc Initialization of mutekh libraries
+  during INIT_SMP
+  after INIT_CPUS
+  after INIT_MUTEK_SCHEDULER_INIT
+%init end
+
+%init INIT_APPLICATION
+  parent CONFIG_MUTEK
+  desc Call of the app_start function provided by the application
+  during INIT_SMP
+  after INIT_LIBRARIES
+  function mutek_app_initsmp
+%init end
+
+%init INIT_SMP_STARTUP_BARRIER
+  parent CONFIG_MUTEK
+  desc Initialize the spin-barrier primitive used to synchronize processors during smp startup
+  condition CONFIG_ARCH_SMP
+  during INIT_BOOTSTRAP
+  after INIT_DEVICE       # we need to know the number of cpus
+  function mutek_startup_barrier_init
+%init end
+
+
+
 %init INIT_MUTEK_FAULT_HANDLER
+  parent CONFIG_MUTEK
   desc Setup a processor fault handler which
   during INIT_CPUS
   function mutek_fault_initsmp
 %init end
 
-%init INIT_SMP_STARTUP_BARRIER
-  desc Initialize the spin-barrier primitive used to synchronize processors during smp startup
-  parent CONFIG_ARCH_SMP
-  during INIT_BOOTSTRAP
-  after INIT_DEVICE       # we need to know the number of cpus
-  function mutek_startup_barrier_init
-%init end
+
 
 %config CONFIG_MUTEK_CONSOLE
   desc Enable text console support
@@ -34,6 +103,8 @@
   before INIT_LIBRARIES
   function mutek_console_initsmp
 %init end
+
+
 
 %config CONFIG_MUTEK_EARLY_CONSOLE
   desc Indicate early primitive text console is used at startup
@@ -203,6 +274,7 @@
 #		Memory allocator
 
 %init INIT_MUTEK_MEMALLOC
+  parent CONFIG_MUTEK
   desc Initialization of memory allocator
   during INIT_MEMORY
   after INIT_MEMORY_SECTIONS
