added gaisler architecture lock init

--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -17,6 +17,16 @@
   function gaisler_bss_section_init
 %init end
 
+%init INIT_GAISLER_ARCH_LOCK
+  parent CONFIG_ARCH_GAISLER
+  condition CONFIG_CPU_SPARC_LEON3_CASA!
+  desc Initialize the global spinlock used to implement atomic ops when CASA instruction is not available.
+  during INIT_BOOTSTRAP
+  after INIT_DEVICE
+  before INIT_START_CPUS
+  function gaisler_arch_lock_init
+%init end
+
 %init INIT_GAISLER_MEM_ALLOC
   parent CONFIG_ARCH_GAISLER
   during INIT_MUTEK_MEMALLOC
