--- a/examples/libtermui_liblua/config
+++ b/examples/libtermui_liblua/config
@@ -11,6 +11,6 @@
   CONFIG_LIBTERMUI
   CONFIG_LIBLUA
 
-%include $(SRC_DIR)/examples/common/build_options.conf
-%include $(SRC_DIR)/examples/common/platforms.conf
+  %include scripts/options.build
+  %include arch/arch.build
 
