--- a/examples/malloc_stress/config
+++ b/examples/malloc_stress/config
@@ -48,5 +48,5 @@
   CONFIG_MUTEK_MEMALLOC_STATS
 #  CONFIG_MUTEK_PRINTK_KEEP_EARLY
 
-%include $(SRC_DIR)/examples/common/build_options.conf
-%include $(SRC_DIR)/examples/common/platforms.conf
+  %include scripts/options.build
+  %include arch/arch.build
