--- a/examples/openmp_sort/config
+++ b/examples/openmp_sort/config
@@ -15,8 +15,8 @@
   CONFIG_HEXO_INTTYPES_DEPRECATED undefined
   CONFIG_LIBC_FORMATTER_FLOAT
 
-%include $(SRC_DIR)/examples/common/build_options.conf
-%include $(SRC_DIR)/examples/common/platforms.conf
+  %include scripts/options.build
+  %include arch/arch.build
 
   CONFIG_ARCH_EMU_UNLOCK_YIELD undefined
 
