--- a/examples/splash_radix/config
+++ b/examples/splash_radix/config
@@ -15,6 +15,6 @@
   # Libs
   CONFIG_PTHREAD
 
-%include $(SRC_DIR)/examples/common/build_options.conf
-%include $(SRC_DIR)/examples/common/platforms.conf
+  %include scripts/options.build
+  %include arch/arch.build
 
