--- a/examples/splash_radix_het/config
+++ b/examples/splash_radix_het/config
@@ -15,6 +15,6 @@
   CONFIG_HEXO_INTTYPES_DEPRECATED undefined
   CONFIG_LIBC_STREAM_STD undefined
 
-%include $(SRC_DIR)/examples/common/build_options.conf
+  %include scripts/options.build
 %include $(SRC_DIR)/examples/common/platforms-soclib.conf
 
