made app_start function call optional

--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -15,8 +15,18 @@
 %config end
 
 %config CONFIG_PTHREAD_MAIN
-  desc Provide a standard main(argc, argv) function with a pthread context, defines app_start();
+  desc Call the user defined main(argc, argv) function within a pthread context.
   parent CONFIG_PTHREAD
+  suggest_when CONFIG_APP_START!
+%config end
+
+%init INIT_PTHREAD_CREATE_MAIN
+  parent CONFIG_PTHREAD_MAIN
+  desc Create a POSIX thread for the user defined main function.
+  during INIT_SMP
+  after INIT_LIBRARIES
+  before INIT_MUTEK_SCHEDULER_START
+  function libpthread_create_main_initsmp
 %config end
 
 %config CONFIG_PTHREAD_CHECK
