--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -61,13 +61,26 @@
   after INIT_MUTEK_SCHEDULER_INIT
 %init end
 
-%init INIT_APPLICATION
+
+%config CONFIG_APP_START
+  flags root
+  desc Call the user defined @ref app_start function before the scheduler is started.
+%config end
+
+%config CONFIG_APP_START_SMP
+  desc When this token is defined, all processors execute the @ref app_start function
   parent CONFIG_MUTEK
-  desc Call of the app_start function provided by the application
+%config end
+
+%init INIT_APP_START
+  parent CONFIG_APP_START
   during INIT_SMP
   after INIT_LIBRARIES
+  before INIT_MUTEK_SCHEDULER_START
   function mutek_app_initsmp
 %init end
+
+
 
 %init INIT_SMP_STARTUP_BARRIER
   parent CONFIG_MUTEK
@@ -158,11 +171,6 @@
   depend CONFIG_MUTEK_EARLY_CONSOLE
 %config end
 
-%config CONFIG_MUTEK_SMP_APP_START
-  desc let all processors enter app_start function
-  parent CONFIG_MUTEK
-%config end
-
 ######################################################################
 #		Vmem
 
@@ -213,7 +221,6 @@
   parent CONFIG_MUTEK_SCHEDULER
   desc Initialization of scheduler and first interrupts enable
   after INIT_LIBRARIES
-  after INIT_APPLICATION
   during INIT_SMP
   function mutek_scheduler_start
 %init end
