partially updated arch/emu and cpu/x86-emu for new device API and new startup process

--- a/arch/emu/drivers/Makefile
+++ b/arch/emu/drivers/Makefile
@@ -1,3 +1,21 @@
 
-subdirs = block_file icu net_tuntap timer tty
+ifeq ($(CONFIG_DRIVER_BLOCK_EMU), defined)
+subdirs += block_file
+endif
+
+ifeq ($(CONFIG_DRIVER_CHAR_EMUTTY), defined)
+subdirs += tty
+endif
+
+ifeq ($(CONFIG_DRIVER_ICU_EMU), defined)
+subdirs += icu
+endif
+
+ifeq ($(CONFIG_DRIVER_ICU_NET_TUNTAP), defined)
+subdirs += net_tuntap
+endif
+
+ifeq ($(CONFIG_DRIVER_ICU_TIMER_EMU), defined)
+subdirs += timer
+endif
 
