--- a/arch/emu/drivers/icu/icu.config
+++ b/arch/emu/drivers/icu/icu.config
@@ -2,10 +2,9 @@
 %config CONFIG_DRIVER_ICU_EMU
   desc enable unix emulation virtual interrupt controller support
   when CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_SMP CONFIG_HEXO_IPI
-  depend CONFIG_ARCH_EMU
+  parent CONFIG_ARCH_EMU
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_ICU
   depend CONFIG_HEXO_IPI
-  parent CONFIG_DRIVER
 %config end
 
