--- a/arch/emu/drivers/net_tuntap/tuntap.config
+++ b/arch/emu/drivers/net_tuntap/tuntap.config
@@ -2,7 +2,6 @@
 %config CONFIG_DRIVER_NET_TUNTAP
   desc Enable TUN/TAP network device support
   depend CONFIG_NETWORK
-  depend CONFIG_ARCH_EMU
+  parent CONFIG_ARCH_EMU
   depend CONFIG_DEVICE_NET
-  parent CONFIG_DRIVER
 %config end
