--- a/arch/emu/drivers/block_file/block.config
+++ b/arch/emu/drivers/block_file/block.config
@@ -3,7 +3,7 @@
   desc enable emu block device support
   require CONFIG_DRIVER_BLOCK_EMU_BLOCKSIZE
   depend CONFIG_DEVICE_BLOCK
-  parent CONFIG_DRIVER
+  parent CONFIG_ARCH_EMU
 %config end
 
 %config CONFIG_DRIVER_BLOCK_EMU_BLOCKSIZE
