added console init code

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -103,18 +103,18 @@
 
 
 %config CONFIG_MUTEK_CONSOLE
-  desc Enable text console support
+  desc Enable console based on a char device driver.
   when CONFIG_DEVICE_CHAR
   parent CONFIG_MUTEK
 %config end
 
 %init INIT_MUTEK_CONSOLE
   parent CONFIG_MUTEK_CONSOLE
-  desc Setup console and print hello messages
+  desc Initialize the console_dev device accessor.
   during INIT_SMP
   after INIT_MUTEK_SCHEDULER_INIT
   before INIT_LIBRARIES
-  function mutek_console_initsmp
+  function mutek_console_initsmp mutek_console_cleanupsmp
 %init end
 
 
