allow calling mutek semaphore and rwlock functions when the scheduler is disabled

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -270,17 +270,17 @@
 %config end
 
 %config CONFIG_MUTEK_RWLOCK
-  depend CONFIG_MUTEK_SCHEDULER
   flags auto
   parent CONFIG_MUTEK
-  desc Provide read/write locks based on hexo scheduler
+  desc Provide read/write locks based on the mutek scheduler
+  desc Mutek rwlocks functions are empty when the scheduler is disabled in the configuration.
 %config end
 
 %config CONFIG_MUTEK_SEMAPHORE
-  depend CONFIG_MUTEK_SCHEDULER
   flags auto
   parent CONFIG_MUTEK
-  desc Provide generic semaphore on hexo scheduler
+  desc Provide generic semaphore on the mutek scheduler
+  desc Mutek semaphore functions are empty when the scheduler is disabled in the configuration.
 %config end
 
 ######################################################################
