added support for multiple nested register save/restore per context, implemented for mips cpu

--- a/cpu/avr32/avr32.config
+++ b/cpu/avr32/avr32.config
@@ -46,5 +46,6 @@
   provide CONFIG_CPU_EXCEPTION_ADDR=0xa0000004
   provide CONFIG_CPU_EXCEPTION_SIZE=0x00000104
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00000004
+  exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
