--- a/cpu/nios2/nios.config
+++ b/cpu/nios2/nios.config
@@ -39,6 +39,7 @@
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_HEXO_STACK_ALIGN=8
   exclude CONFIG_HEXO_FPU
+  exclude CONFIG_HEXO_CONTEXT_NESTED
   provide CONFIG_CPU_EXCEPTION_SIZE=0x200
   provide CONFIG_CPU_RESET_SIZE=12
   provide CONFIG_CPU_RESET_SEPARATE
