--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -90,5 +90,6 @@
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=16
+  exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
