--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -23,6 +23,7 @@
   provide CONFIG_CPU_EXCEPTION_ALIGN=16
   provide CONFIG_CPU_EXCEPTION_ADDR=0x00000000
   provide CONFIG_CPU_EXCEPTION_SIZE=0x200
+  exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
 %init INIT_X86_PMODE_TABLES
