--- a/cpu/x86_64-emu/emu.config
+++ b/cpu/x86_64-emu/emu.config
@@ -15,5 +15,6 @@
   provide CONFIG_CPU_SMP_CAPABLE
   parent CONFIG_CPU_META
   provide CONFIG_HEXO_STACK_ALIGN=16
+  exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
