--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -59,6 +59,22 @@
   function hexo_context_initsmp
 %init end
 
+%config CONFIG_HEXO_CONTEXT_NESTED
+  parent CONFIG_HEXO
+  flags auto
+  desc Enable nested save/restore of registers in the same context.
+  desc This allows either an explicit context switch, or an irq/fault to occur during execution of an irq/fault/syscall handler.
+  desc Interrupts can be re-enabled by the handler code when this configuration token is enabled.
+  require CONFIG_HEXO_CONTEXT_NESTED_COUNT>1
+%config end
+
+%config CONFIG_HEXO_CONTEXT_NESTED_COUNT
+  parent CONFIG_HEXO_CONTEXT_NESTED
+  flags value
+  desc Specify the number of nested register save buffers allocated for a single context.
+  default 2
+%config end
+
 %config CONFIG_HEXO_CONTEXT_PREEMPT
   parent CONFIG_HEXO
   flags auto
