--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -117,6 +117,7 @@
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00000004
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=8
+  exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
 %config CONFIG_CPU_ARM_TLS_IN_C15
