--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -30,6 +30,7 @@
   provide CONFIG_LIBC_STRING_ASM
   suggest CONFIG_MUTEK_MEMALLOC_ALIGN=1
   parent CONFIG_CPU_META
+  exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
 %config CONFIG_CPU_AVR_IRQ_COUNT
