--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -47,6 +47,7 @@
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00010000
   provide CONFIG_CPU_RESET_ADDR=0xffffff80
   provide CONFIG_CPU_RESET_SIZE=0x00000080
+  exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
 %config CONFIG_CPU_PPC_WAIT_OPCODE
