--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -106,7 +106,6 @@
   when CONFIG_CPU_ARM_1176F
 
   provide CONFIG_CPU_ARCHNAME=arm
-  provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_EXCEPTION_ADDR=0x0
   single CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI CONFIG_CPU_ARM_CORTEXA8 CONFIG_CPU_ARM_CORTEXA9 CONFIG_CPU_ARM_1176 CONFIG_CPU_ARM_1176F
@@ -116,8 +115,28 @@
   provide CONFIG_CPU_EXCEPTION_SIZE=0x00000100
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00000004
   provide CONFIG_CPU_RESET_ADDR=0x00000000
-  provide CONFIG_CPU_RESET_SIZE=8
+  provide CONFIG_CPU_RESET_SIZE=12
   exclude CONFIG_HEXO_CONTEXT_NESTED
+  single CONFIG_CPU_ARM_LITTLE CONFIG_CPU_ARM_BIG_BE32 CONFIG_CPU_ARM_BIG_BE8
+%config end
+
+%config CONFIG_CPU_ARM_LITTLE
+  desc Select ARM little endian mode
+  parent CONFIG_CPU_ARM
+  provide CONFIG_CPU_ENDIAN_LITTLE
+  when CONFIG_CPU_ARM_BIG_BE8! CONFIG_CPU_ARM_BIG_BE32!
+%config end
+
+%config CONFIG_CPU_ARM_BIG_BE32
+  desc Select ARM legacy big endian mode (code & data are big endian)
+  parent CONFIG_CPU_ARM
+  provide CONFIG_CPU_ENDIAN_BIG
+%config end
+
+%config CONFIG_CPU_ARM_BIG_BE8
+  desc Select ARM data big endian mode (big endian for data only)
+  parent CONFIG_CPU_ARM
+  provide CONFIG_CPU_ENDIAN_BIG
 %config end
 
 %config CONFIG_CPU_ARM_TLS_IN_C15
