--- a/cpu/arm/drivers/pl011uart/pl011uart.config
+++ b/cpu/arm/drivers/pl011uart/pl011uart.config
@@ -6,3 +6,10 @@
   suggest CONFIG_DEVICE_IRQ
 %config end
 
+%config CONFIG_DRIVER_CHAR_PL011_SWFIFO
+  desc Size of the additional software FIFOs. 0 disables software FIFOs.
+  parent CONFIG_DRIVER_CHAR_PL011
+  flags value
+  default 32
+%config end
+
