added CONFIG_MUTEK_CONSOLE_DEVICE_PATHS and CONFIG_LIBC_TIMER_DEVICE_PATHS config tokens

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -40,7 +40,15 @@
 %config CONFIG_LIBC_TIME
   desc Enable C library time related functions.
   depend CONFIG_DEVICE_TIMER
-  parent CONFIG_LIBC  
+  parent CONFIG_LIBC
+  require CONFIG_LIBC_TIMER_DEVICE_PATHS
+%config end
+
+%config CONFIG_LIBC_TIMER_DEVICE_PATHS
+  desc Specify the candidate libc timer device paths in the device tree
+  parent CONFIG_LIBC_TIME
+  flags value
+  default "libc_timer timer*"
 %config end
 
 %init INIT_LIBC_TIME
