--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -121,6 +121,14 @@
   desc Enable console based on a char device driver.
   when CONFIG_DEVICE_CHAR
   parent CONFIG_MUTEK
+  require CONFIG_MUTEK_CONSOLE_DEVICE_PATHS
+%config end
+
+%config CONFIG_MUTEK_CONSOLE_DEVICE_PATHS
+  desc Specify the candidate console device paths in the device tree
+  parent CONFIG_MUTEK_CONSOLE
+  flags value
+  default "console uart*"
 %config end
 
 %init INIT_MUTEK_CONSOLE
