added Zynq arch support

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -41,7 +41,7 @@
   desc meta configuration token used to impose requirements
   flags	mandatory internal root
   require CONFIG_ARCH_NAME
-  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE CONFIG_ARCH_GAISLER CONFIG_ARCH_ATMEL CONFIG_ARCH_RASPBERRY
+  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE CONFIG_ARCH_GAISLER CONFIG_ARCH_ATMEL CONFIG_ARCH_RASPBERRY CONFIG_ARCH_ZYNQ
 %config end
 
 %config CONFIG_ARCH_SMP_CAPABLE
