minor fixes in gaisler config files

--- a/arch/gaisler/drivers/irqmp/irqmp.config
+++ b/arch/gaisler/drivers/irqmp/irqmp.config
@@ -16,6 +16,7 @@
   desc If this option is undefined, the driver can still be used to start other cpus in SMP platforms.
   parent CONFIG_ARCH_GAISLER
   depend CONFIG_DEVICE_ICU
+  default defined
 %config end
 
 %config CONFIG_DRIVER_GAISLER_IRQMP_BYPASS
