removed the device_get_default_icu function, irq resources of devices now use a device tree path to the icu instead of a pointer to the icu device

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -60,6 +60,27 @@
   flags auto
 %config end
 
+%config CONFIG_DEVICE_IRQ_MAX_OUTPUT_ID
+  parent CONFIG_DEVICE_IRQ
+  desc Specify the log2 of the maximum output id of an irq link
+  flags value maxval
+  default 5
+%config end
+
+%config CONFIG_DEVICE_IRQ_MAX_INPUT_ID
+  parent CONFIG_DEVICE_IRQ
+  desc Specify the log2 of the maximum intput id of an irq link
+  flags value maxval
+  default 11
+%config end
+
+%config CONFIG_DEVICE_IRQ_MAX_LOGICAL_ID
+  parent CONFIG_DEVICE_IRQ
+  desc Specify the log2 of the maximum logical id of an irq
+  flags value maxval
+  default 16
+%config end
+
 %config CONFIG_DEVICE_ADDRESS_SPACES
   parent CONFIG_DEVICE
   desc Support platforms with multiple address spaces.
