--- a/cpu/arm/drivers/Makefile
+++ b/cpu/arm/drivers/Makefile
@@ -3,6 +3,10 @@ ifeq ($(CONFIG_DRIVER_CHAR_PL011), defined)
 subdirs += pl011uart
 endif
 
+ifeq ($(CONFIG_DRIVER_ICU_PL390), defined)
+subdirs += pl390icu
+endif
+
 ifeq ($(CONFIG_DRIVER_ARM_A9MPCORE), defined)
 subdirs += a9mpcore
 endif
