gaisler arch device enum now uses relevant device names

--- a/arch/gaisler/Makefile
+++ b/arch/gaisler/Makefile
@@ -1,12 +1,8 @@
 
-objs = arch_init.o
+objs = arch_init.o device_ids.o
 
 ifneq ($(CONFIG_GAISLER_EARLY_CONSOLE),undefined)
 objs += early_console.o
-endif
-
-ifneq ($(CONFIG_GAISLER_DEVICE_IDS),undefined)
-objs += device_ids.o
 endif
 
 ifeq ($(LINKING),1)
