restored possibility to include a GNU multiboot header in the kernel, in a more generic way

--- a/mutek/load.config
+++ b/mutek/load.config
@@ -184,6 +184,17 @@
   flags value
 %config end
 
+%config CONFIG_LOAD_MULTIBOOT
+  parent CONFIG_LOAD_BOOTLOAD
+  desc A GNU multiboot header is included in the output file. This is required by some boot loaders like GNU Grub.
+%config end
+
+%config CONFIG_LOAD_MULTIBOOT_ELF
+  desc The multiboot header do not contain the address fields, suitable when generating an ELF kernel only.
+  parent CONFIG_LOAD_MULTIBOOT
+  default defined
+%config end
+
 
 
 %config CONFIG_LOAD_CUSTOM
