added cpu binary search tree, removed all hexo/segment.h related files, fixed emu no smp, fixed x86 no smp

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -17,6 +17,13 @@
   default 16777216
 %config end
 
+%config CONFIG_ARCH_EMU_CPUS
+  flags value
+  desc Set the number of emulated processors
+  parent CONFIG_ARCH_EMU
+  default 4
+%config end
+
 %config CONFIG_ARCH_EMU_DARWIN
   desc Target system is Darwin (MacOS X)
   parent CONFIG_ARCH_EMU
