--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -30,7 +30,8 @@
   parent CONFIG_CPU_X86
   desc Initialize x86 protected mode GDT and IDT tables
   during INIT_BOOTSTRAP
-  before INIT_START_CPUS
+  after INIT_MEMORY
+  before INIT_DEVICE
   function x86_pmode_tables_init
 %config end
 
