--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -24,7 +24,7 @@
   condition CONFIG_ARCH_SMP
   during INIT_BOOTSTRAP
   after INIT_SMP_STARTUP_BARRIER
-  after INIT_HEXO_CPUS_STACK
+  after INIT_DEVICE
   before INIT_SMP
   flags notempty
 %init end
