--- a/examples/getline_lua/config
+++ b/examples/getline_lua/config
@@ -1,5 +1,5 @@
 
-  %set OUTPUT_NAME libtermui_liblua
+  %set OUTPUT_NAME getline_lua
 
 # New source code module to be compiled
   %append MODULES $(OUTPUT_NAME):$(CONFIGPATH)
@@ -10,6 +10,13 @@
 # Libs
   CONFIG_LIBTERMUI
   CONFIG_LIBLUA
+
+  CONFIG_PTHREAD
+  CONFIG_PTHREAD_MAIN
+  CONFIG_PTHREAD_STACK_SIZE 16384
+
+  CONFIG_MUTEK_SCHEDULER
+  CONFIG_HEXO_IRQ
 
   %include scripts/options.build
   %include arch/arch.build
