--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -6,14 +6,11 @@
   flags harddep
   parent CONFIG_CPU_ARM
   depend CONFIG_ARCH_SOCLIB
-  provide CONFIG_CPU_CACHE
-  provide CONFIG_CPU_ARM_TLS_IN_C15
-  provide CONFIG_COMPILE_MARCH=armv6k
   depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
-  provide CONFIG_CPU_NAME=armv6k
-  provide CONFIG_CPU_ARM_CYCLES_COUNTER
+  provide CONFIG_CPU_NAME=arm
+  provide CONFIG_CPU_ARM_ARCH_VERSION=6
 %config end
 
 %config CONFIG_CPU_ARM_7TDMI
@@ -23,7 +20,7 @@
   provide CONFIG_COMPILE_MCPU=arm7tdmi
   depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_NAME=arm7tdmi
-  provide CONFIG_CPU_ARM_CYCLES_COUNTER
+  provide CONFIG_CPU_ARM_ARCH_VERSION=4
 %config end
 
 %config CONFIG_CPU_ARM_1176
@@ -34,8 +31,8 @@
   depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_COMPILE_MCPU=arm1176jz-s
   provide CONFIG_CPU_NAME=arm1176
-  provide CONFIG_CPU_ARM_CYCLES_COUNTER
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=6
 %config end
 
 %config CONFIG_CPU_ARM_1176F
@@ -45,8 +42,8 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_COMPILE_MCPU=arm1176jzf-s
   provide CONFIG_CPU_NAME=arm1176f
-  provide CONFIG_CPU_ARM_CYCLES_COUNTER
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=6
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXA8
@@ -54,10 +51,11 @@
   flags harddep
   parent CONFIG_CPU_ARM
   provide CONFIG_CPU_CACHE
+  provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_COMPILE_MCPU=cortex-a8
   provide CONFIG_CPU_NAME=arm_cortex_a8
-  provide CONFIG_CPU_ARM_CYCLES_COUNTER
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=7
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXA9
@@ -65,28 +63,72 @@
   flags harddep
   parent CONFIG_CPU_ARM
   provide CONFIG_CPU_CACHE
+  provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_COMPILE_MCPU=cortex-a9
   provide CONFIG_CPU_NAME=arm_cortex_a9
-  provide CONFIG_CPU_ARM_CYCLES_COUNTER
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=7
+%config end
+
+%config CONFIG_CPU_ARM_CORTEXM0
+  desc Arm Cortex-M0
+  flags harddep
+  parent CONFIG_CPU_ARM
+  provide CONFIG_COMPILE_MCPU=cortex-m0
+  provide CONFIG_CPU_NAME=arm_cortex_m0
+  provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=6
+%config end
+
+%config CONFIG_CPU_ARM_CORTEXM0PLUS
+  desc Arm Cortex-M0+
+  flags harddep
+  parent CONFIG_CPU_ARM
+  provide CONFIG_COMPILE_MCPU=cortex-m0+
+  provide CONFIG_CPU_NAME=arm_cortex_m0plus
+  provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=6
+%config end
+
+%config CONFIG_CPU_ARM_CORTEXM1
+  desc Arm Cortex-M1
+  flags harddep
+  parent CONFIG_CPU_ARM
+  provide CONFIG_COMPILE_MCPU=cortex-m1
+  provide CONFIG_CPU_NAME=arm_cortex_m1
+  provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=6
+%config end
+
+%config CONFIG_CPU_ARM_CORTEXM3
+  desc Arm Cortex-M3
+  flags harddep
+  parent CONFIG_CPU_ARM
+  provide CONFIG_COMPILE_MCPU=cortex-m3
+  provide CONFIG_CPU_NAME=arm_cortex_m3
+  provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=7
+%config end
+
+%config CONFIG_CPU_ARM_CORTEXM4
+  desc Arm Cortex-M4
+  flags harddep
+  parent CONFIG_CPU_ARM
+  provide CONFIG_COMPILE_MCPU=cortex-m4
+  provide CONFIG_CPU_NAME=arm_cortex_m4
+  provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_ARM_ARCH_VERSION=7
 %config end
 
 %config CONFIG_CPU_ARM_THUMB
-  desc ARM Thumb code support
+  desc Generate ARM thumb code
   parent CONFIG_CPU_ARM
+  depend CONFIG_CPU_ARM_ARCH_PROFILE_A
 %config end
 
 %config CONFIG_CPU_ARM_CUSTOM_IRQ_HANDLER
   desc Has custom ICU-based IRQ handler, often seen in microcontrollers
   parent CONFIG_CPU_ARM
-%config end
-
-%config CONFIG_DRIVER_CPU_ARM
-  desc Enable ARM processor device driver
-  parent CONFIG_CPU_ARM
-  depend CONFIG_DEVICE_CPU
-  suggest CONFIG_DEVICE_IRQ
-  when CONFIG_CPU_ARM CONFIG_DEVICE
 %config end
 
 ######################################################################
@@ -104,20 +146,66 @@
   when CONFIG_CPU_ARM_CORTEXA9
   when CONFIG_CPU_ARM_1176
   when CONFIG_CPU_ARM_1176F
+  when CONFIG_CPU_ARM_CORTEXM0
+  when CONFIG_CPU_ARM_CORTEXM0PLUS
+  when CONFIG_CPU_ARM_CORTEXM1
+  when CONFIG_CPU_ARM_CORTEXM3
+  when CONFIG_CPU_ARM_CORTEXM4
 
   provide CONFIG_CPU_ARCHNAME=arm
-  provide CONFIG_CPU_RESET_ADDR=0x00000000
-  provide CONFIG_CPU_EXCEPTION_ADDR=0x0
-  single CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI CONFIG_CPU_ARM_CORTEXA8 CONFIG_CPU_ARM_CORTEXA9 CONFIG_CPU_ARM_1176 CONFIG_CPU_ARM_1176F
+  single CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI CONFIG_CPU_ARM_CORTEXA8 CONFIG_CPU_ARM_CORTEXA9 CONFIG_CPU_ARM_1176 CONFIG_CPU_ARM_1176F CONFIG_CPU_ARM_CORTEXM0 CONFIG_CPU_ARM_CORTEXM0PLUS CONFIG_CPU_ARM_CORTEXM1 CONFIG_CPU_ARM_CORTEXM3 CONFIG_CPU_ARM_CORTEXM4
   provide CONFIG_HEXO_STACK_ALIGN=8
 
   provide CONFIG_CPU_EXCEPTION_ADDR=0x00000000
+  exclude CONFIG_HEXO_CONTEXT_NESTED
+  single CONFIG_CPU_ARM_LITTLE CONFIG_CPU_ARM_BIG_BE32 CONFIG_CPU_ARM_BIG_BE8
+
+  require CONFIG_CPU_ARM_ARCH_VERSION
+  depend CONFIG_CPU_ARM_ARCH_PROFILE_A CONFIG_CPU_ARM_ARCH_PROFILE_M
+%config end
+
+%config CONFIG_CPU_ARM_ARCH_VERSION
+  desc ARM processor architecture version
+  flags internal value
+  parent CONFIG_CPU_ARM
+%config end
+
+%config CONFIG_CPU_ARM_ARCH_PROFILE_A
+  desc ARM processor application architecture profile
+  flags internal harddep
+  parent CONFIG_CPU_ARM
+
   provide CONFIG_CPU_EXCEPTION_SIZE=0x00000100
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00000004
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=12
-  exclude CONFIG_HEXO_CONTEXT_NESTED
-  single CONFIG_CPU_ARM_LITTLE CONFIG_CPU_ARM_BIG_BE32 CONFIG_CPU_ARM_BIG_BE8
+
+  when CONFIG_CPU_ARM_SOCLIB
+  when CONFIG_CPU_ARM_7TDMI
+  when CONFIG_CPU_ARM_1176
+  when CONFIG_CPU_ARM_1176F
+  when CONFIG_CPU_ARM_CORTEXA8
+  when CONFIG_CPU_ARM_CORTEXA9
+%config end
+
+%config CONFIG_CPU_ARM_ARCH_PROFILE_M
+  desc ARM processor microcontroller architecture profile
+  flags internal harddep
+  parent CONFIG_CPU_ARM
+
+  provide CONFIG_CPU_EXCEPTION_SIZE=(16+CONFIG_CPU_ARM_M_IRQ_COUNT*4)
+  provide CONFIG_CPU_EXCEPTION_ALIGN=0x00000100
+  provide CONFIG_CPU_RESET_ADDR=0x00000000
+  provide CONFIG_CPU_RESET_SIZE=0
+
+  when CONFIG_CPU_ARM_CORTEXM0
+  when CONFIG_CPU_ARM_CORTEXM0PLUS
+  when CONFIG_CPU_ARM_CORTEXM1
+  when CONFIG_CPU_ARM_CORTEXM3
+  when CONFIG_CPU_ARM_CORTEXM4
+
+  exclude CONFIG_LOAD_RESET_SEPARATE
+  exclude CONFIG_ARCH_SMP
 %config end
 
 %config CONFIG_CPU_ARM_LITTLE
@@ -137,17 +225,20 @@
   desc Select ARM data big endian mode (big endian for data only)
   parent CONFIG_CPU_ARM
   provide CONFIG_CPU_ENDIAN_BIG
+  depend CONFIG_CPU_ARM_ARCH_PROFILE_A
 %config end
 
-%config CONFIG_CPU_ARM_TLS_IN_C15
-  desc Implement TLS with dedicated register in c0
-  flags internal meta
+%config CONFIG_CPU_ARM_NEON
+  desc Enable use of ARM Neon instructions
   parent CONFIG_CPU_ARM
+  depend CONFIG_CPU_ARM_ARCH_PROFILE_A
+  depend CONFIG_HEXO_FPU
 %config end
 
-%config CONFIG_CPU_ARM_CYCLES_COUNTER
-  desc Arm processor has a cycles counter register in c15, c12, 1
-  flags meta
+%config CONFIG_CPU_ARM_M_IRQ_COUNT
+  desc ARM M profile irq count
+  flags value
+  default 16
   parent CONFIG_CPU_ARM
 %config end
 
